--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,17 +34,6 @@ spring:
     database: 2
     host: 127.0.0.1
     port: 6379
-#    password: jumeng2018!
-    timeout: 5000
-    pool:
-      # 最大空闲连接数
-      max-idle: 8
-      # 最小空闲连接数
-      min-idle: 0
-      # 最大活跃连接数
-      max-active: 8
-      # 获取连接时的最大等待毫秒数(-1阻塞不确定的时间)
-      max-wait: -1
 
 dubbo:
   bole:
@@ -60,7 +49,7 @@ mybatis:
 
 
 mapper:
-  mappers: MyMapper
+  mappers: com.example.common.MyMapper
   not-empty: false
   identity: MYSQL
 
