--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 9092
+  port: 9093
   servlet:
     context-path: /ac
 
@@ -19,19 +19,18 @@ spring:
       pool-name: DatebookHikariCP
   dubbo:
 #    server: true
-#    registry: zookeeper://192.168.8.134:2181
      registry: zookeeper://127.0.0.1:2181
   rabbitmq:
-    host: 192.168.8.152
+    host: 127.0.0.1
     port: 5672
-    username: jumstc
-    password: jumstc
+    username: zwt
+    password: zwt
     publisher-confirms: true
-    vhost: ops
+    vhost: bt
     connection:
       timeout: 3000
   redis:
-    database: 2
+    database: 3
     host: 127.0.0.1
     port: 6379
 
