--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: 9093
   servlet:
     context-path: /ac
+management:
+  port: 9094
 
 spring:
   application:
@@ -26,9 +28,8 @@ spring:
     username: zwt
     password: zwt
     publisher-confirms: true
-    vhost: bt
-    connection:
-      timeout: 3000
+    virtual-host: bt
+    connection-timeout: 3s
   redis:
     database: 3
     host: 127.0.0.1
@@ -38,17 +39,28 @@ dubbo:
   scan:
     basePackages: com.example.service
   application:
-    id: ops-api-web
-    name: ops-api-web
+    id: boot
+    name: boot
     qos-port: 12306
     qos-enable: false
   protocol:
     id: dubbo
     name: dubbo
     port: 12340
-  registry:
-    id: ops
-    address: zookeeper://127.0.0.1:2181
+#  registry:
+#    id: local
+#    address: zookeeper://127.0.0.1:2181
+
+  registries:
+    registry1:
+      address: zookeeper://127.0.0.1:2181
+
+  consumer:
+    check: false
+    timeout: 5000
+    retries: 0
+  provider:
+    timeout: 5000
 
 mybatis:
   type-aliases-package: com.example.entity
