--- a/pom.xml
+++ b/pom.xml
@@ -241,6 +241,11 @@
                         <version>${mysql.version}</version>
                         <scope>runtime</scope>
                     </dependency>
+                    <dependency>
+                        <groupId>com.haier.hairy</groupId>
+                        <artifactId>mybatis-generator-core</artifactId>
+                        <version>1.0.1</version>
+                    </dependency>
                 </dependencies>
             </plugin>
         </plugins>
