--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -110,47 +110,51 @@ datasource:
     idle-timeout: 120000
     data-source-properties: {cachePrepStmts: true, prepStmtCacheSize: 250, prepStmtCacheSqlLimit: 2048, useServerPrepStmts: true}
 
-shardingRule:
-  tables:
-    t_order:
-      actualDataNodes: ds_${0..1}.t_order
-      keyGeneratorColumnName: order_id
-    t_order_item:
-      actualDataNodes: ds_${0..1}.t_order_item
-      keyGeneratorColumnName: order_item_id
-  bindingTables:
-    - t_order,t_order_item
+example:
+  version: 1.0
+  group: ex
 
-  defaultDatabaseStrategy:
-    inline:
-      shardingColumn: user_id
-      algorithmExpression: ds_${user_id % 2}
-  defaultTableStrategy:
-    none:
-  defaultKeyGeneratorClassName: io.shardingsphere.core.keygen.DefaultKeyGenerator
-
-tables:
-  config:
-    dynamic: true
-  t_order:
-    dynamic: true
-    databaseStrategy: &db001
-      shardingColumns: order_id
-      algorithmClassName: com.dangdang.ddframe.rdb.sharding.config.yaml.algorithm.SingleAlgorithm
-    tableStrategy: &table001
-      shardingColumns: id
-      algorithmExpression: t_order_${id.longValue() % 2}
-
-  t_order_item:
-    dynamic: true
-    #绑定表中其余的表的策略与第一张表的策略相同
-    databaseStrategy: *db001
-    tableStrategy: *table001
-
-#默认数据库分片策略
-defaultDatabaseStrategy:
-  shardingColumns: order_id, user_id
-  algorithmExpression: t_order_${id.longValue() % 2}
-defaultTableStrategy:
-  shardingColumns: id, order_id
-  algorithmClassName: com.dangdang.ddframe.rdb.sharding.config.yaml.algorithm.MultiAlgorithm
+#shardingRule:
+#  tables:
+#    t_order:
+#      actualDataNodes: ds_${0..1}.t_order
+#      keyGeneratorColumnName: order_id
+#    t_order_item:
+#      actualDataNodes: ds_${0..1}.t_order_item
+#      keyGeneratorColumnName: order_item_id
+#  bindingTables:
+#    - t_order,t_order_item
+#
+#  defaultDatabaseStrategy:
+#    inline:
+#      shardingColumn: user_id
+#      algorithmExpression: ds_${user_id % 2}
+#  defaultTableStrategy:
+#    none:
+#  defaultKeyGeneratorClassName: io.shardingsphere.core.keygen.DefaultKeyGenerator
+#
+#tables:
+#  config:
+#    dynamic: true
+#  t_order:
+#    dynamic: true
+#    databaseStrategy: &db001
+#      shardingColumns: order_id
+#      algorithmClassName: com.dangdang.ddframe.rdb.sharding.config.yaml.algorithm.SingleAlgorithm
+#    tableStrategy: &table001
+#      shardingColumns: id
+#      algorithmExpression: t_order_${id.longValue() % 2}
+#
+#  t_order_item:
+#    dynamic: true
+#    #绑定表中其余的表的策略与第一张表的策略相同
+#    databaseStrategy: *db001
+#    tableStrategy: *table001
+#
+##默认数据库分片策略
+#defaultDatabaseStrategy:
+#  shardingColumns: order_id, user_id
+#  algorithmExpression: t_order_${id.longValue() % 2}
+#defaultTableStrategy:
+#  shardingColumns: id, order_id
+#  algorithmClassName: com.dangdang.ddframe.rdb.sharding.config.yaml.algorithm.MultiAlgorithm
