--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,7 +34,8 @@ spring:
     database: 3
     host: 127.0.0.1
     port: 6379
-
+  resources:
+    static-locations: classpath:/static/
 dubbo:
   scan:
     basePackages: com.example.service
